Changing placeholder's opacity of devis's page

--- a/devis.html
+++ b/devis.html
@@ -430,7 +430,7 @@
             <div class="areaId" id="areaId">
                 <h2 class="devis_header">Quelle est la supérficie de votre logement ? </h2>
                 <div class="container devis_input">
-                    <input type="text" class="devis_input-field" name="area" placeholder="139 m2">
+                    <input type="text" class="devis_input-field" name="area" placeholder="Exemple : 139 m2">
                 </div>
                 <div class="d-flex justify-content-center my-5" id="area">
                     <div class="devis_input-button">Continuer</div>
@@ -476,7 +476,7 @@
                     </div>
                     <div class="devis_input">
                         <label for="lastname" class="devis_input-label">Prénom</label>
-                        <input type="text" class="devis_input-field" id="lastname" name="lastname" placeholder="Jean">
+                        <input type="text" class="devis_input-field" id="lastname" name="lastname" placeholder="Guillaume">
                     </div>
                     <div class="devis_input">
                         <label for="email" class="devis_input-label">Votre adsresse mail</label>
