Replacing one title of devis's page

--- a/devis.html
+++ b/devis.html
@@ -171,7 +171,7 @@
                             <img src="./assets/img/matier.png"
                                 class="travaux_button-image--img devis_button-image--img" alt="" />
                         </div>
-                        <p class="travaux_button-title mt-4">Maitre d’oeuvre <br>
+                        <p class="travaux_button-title mt-4 ml--30">Maitre d’oeuvre <br>
                             (bureau d’étude, architecte)</p>
                     </div>
                     <div class="devis_button matier" id="matier">
