--- a/chaigneau-chaumes-en-brie.html
+++ b/chaigneau-chaumes-en-brie.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./chaigneau.html" class="bg-blue travaux_link">
+            <a href="./chaigneau-chaumes-en-brie.html" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
