--- a/nos-travaux.html
+++ b/nos-travaux.html
@@ -205,7 +205,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./capta.html" class="bg-blue travaux_link">
+            <a href="./capta-prod.html" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -311,7 +311,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./francofa.html" class="bg-blue travaux_link">
+            <a href="./francofa-eurodis.html" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
