--- a/francofa-eurodis.html
+++ b/francofa-eurodis.html
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./francofa.html" class="bg-blue travaux_link">
+            <a href="./francofa-eurodis.html" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
