--- a/nos-travaux-particulier.html
+++ b/nos-travaux-particulier.html
@@ -201,7 +201,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./capta.html" class="bg-blue travaux_link">
+            <a href="./capta-prod.html" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -301,7 +301,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./francofa.html" class="bg-blue travaux_link">
+            <a href="./francofa-eurodis.html" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
@@ -368,7 +368,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./francofa.html" class="bg-blue travaux_link">
+            <a href="./francofa-eurodis.html" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
