Adding my MGPS's modifications

--- a/allianz.html
+++ b/allianz.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="../assets/img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./assets/js/popper.min.js"></script>
     <script defer src="./assets/js/bootstrap.min.js"></script>
@@ -44,6 +44,7 @@
     </script>
 </head>
 
+<!-- Ilyesse HAMCHERIF -->
 <body>
   <section class="Navbar navbar-main fixedNav">
     <nav class="navbar navbar-expand-lg fixedNav p-0">
@@ -71,8 +72,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border-radius: 1.6rem; border-color: #14AE9B;">
                             <ul style="list-style: none; position: relative;">
-                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation &nbsp;<i class="fas fa-chevron-right"></i></a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage &nbsp;<i class="fas fa-chevron-right"></i></a></li>
+                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation </a></li>
+                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage </a></li>
                                 <li><a class="dropdown-item Navbar_nav-link py-3" href="./ventilation.html"> Ventilation &nbsp;</a></li>
                             </ul>
                         </div>
@@ -107,27 +108,27 @@
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-6">
-                <a href="./nos-travaux.html class="travaux_link">
-                <div class="travaux_button">
-                    <div class="travaux_button-image">
-                        <img src="./assets/img/man.png" class="travaux_button-image--img" alt="" />
-                        <p class="travaux_button-title">Professionnel</p>
+                <a href="./nos-travaux.html#professionnel" class="travaux_link">
+                    <div class="travaux_button">
+                        <div class="travaux_button-image">
+                            <img src="./assets/img/man.png" class="travaux_button-image--img" alt="" />
+                            <p class="travaux_button-title">Professionnel</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
             </div>
             <div class="col-md-6">
-                <a href="./nos-travaux-particulier.html class="travaux_link">
-                <div class="travaux_button mt-5">
-                    <div class="travaux_button-image">
-                        <img src="./assets/img/persons.png" class="travaux_button-image--img" alt="" />
-                        <p class="travaux_button-title">Particulier</p>
+                <a href="./nos-travaux-particulier.html#particulier" class="travaux_link">
+                    <div class="travaux_button mt-5">
+                        <div class="travaux_button-image">
+                            <img src="./assets/img/persons.png" class="travaux_button-image--img" alt="" />
+                            <p class="travaux_button-title">Particulier</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
             </div>
         </div>
-        <div class="bg-blue travaux_padding">
+        <div class="bg-blue travaux_padding" id="allianz">
             <div class="travaux_card">
                 <div class="row">
                     <div class="col-md-4 m-0 p-0">
@@ -144,7 +145,8 @@
                                 <li class="travaux_card-content-li">
                                     <h3 class="travaux_card-content-title dot-before">Climatisation (Mitsubishi
                                         Electric)</h3>
-                                    <p class="travaux_card-content-p">trois unités intérieures et un groupe extérieur
+                                    <p class="travaux_card-content-p">trois unités intérieures et un groupe
+                                        extérieur
                                     </p>
                                 </li>
                                 <li class="travaux_card-content-li">
@@ -174,12 +176,6 @@
             <div class="col-md-4 col-sm-6">
                 <div class="gallery_image">
                     <img src="./assets/img/allianz/2.jpg" class="gallery_image-img" alt="" />
-                </div>
-            </div>
-            
-            <div class="col-md-4 col-sm-6">
-                <div class="gallery_image">
-                    <img src="./assets/img/allianz/3.jpg" class="gallery_image-img" alt="" />
                 </div>
             </div>
             
@@ -287,7 +283,7 @@
                         <li class="footer_content-li"> Address : <p class="footer_content-li--link text-center">
                                 7 Rue de la Plaine de la Croix Besnard -  77000 Vaux-le-Pénil</p>
                         </li>
-                        <li class="footer_content-li">Téléphone : <a href="tel:01 64 38 35 82"
+                        <li class="footer_content-li">Téléphone : <a href="tel:0164383582"
                                 class="footer_content-li--link">01 64 38 35 82</a></li>
                         <li class="footer_content-li">E-mail : <a href="mailto: mgps-idf@outlook.com"
                                 class="footer_content-li--link">mgps-idf@outlook.com</a></li>
@@ -329,7 +325,7 @@
     <hr class="sticky_divider">
     <div class="sticky_top">
       <div class="sticky_top-icon">
-        <img src="./assets/img/devis.png" class="sticky_top-icon--img" alt="" />
+        <img src="./assets/img/devis.png" class="sticky_top-icon--img2" alt="" />
       </div>
       <div class="sticky_top-content">
         <p class="sticky_top-content--p">Devis gratuit</p>
