--- a/galerie.html
+++ b/galerie.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="../assets/img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./assets/js/popper.min.js"></script>
     <script defer src="./assets/js/bootstrap.min.js"></script>
@@ -44,6 +44,7 @@
     </script>
 </head>
 
+<!-- Ilyesse HAMCHERIF -->
 <body>
   <section class="Navbar navbar-main fixedNav">
     <nav class="navbar navbar-expand-lg fixedNav p-0">
@@ -71,8 +72,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border-radius: 1.6rem; border-color: #14AE9B;">
                             <ul style="list-style: none; position: relative;">
-                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation &nbsp;<i class="fas fa-chevron-right"></i></a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage &nbsp;<i class="fas fa-chevron-right"></i></a></li>
+                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation </a></li>
+                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage </a></li>
                                 <li><a class="dropdown-item Navbar_nav-link py-3" href="./ventilation.html"> Ventilation &nbsp;</a></li>
                             </ul>
                         </div>
@@ -201,7 +202,7 @@ TODO: Mettre une galerie bootstrap ici en test
     <hr class="sticky_divider">
     <div class="sticky_top">
       <div class="sticky_top-icon">
-        <img src="./assets/img/devis.png" class="sticky_top-icon--img" alt="" />
+        <img src="./assets/img/devis.png" class="sticky_top-icon--img2" alt="" />
       </div>
       <div class="sticky_top-content">
         <p class="sticky_top-content--p">Devis gratuit</p>
