--- a/nos-travaux.html
+++ b/nos-travaux.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="../assets/img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./assets/js/popper.min.js"></script>
     <script defer src="./assets/js/bootstrap.min.js"></script>
@@ -44,6 +44,7 @@
     </script>
 </head>
 
+<!-- Ilyesse HAMCHERIF -->
 <body>
   <section class="Navbar navbar-main fixedNav">
     <nav class="navbar navbar-expand-lg fixedNav p-0">
@@ -71,8 +72,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border-radius: 1.6rem; border-color: #14AE9B;">
                             <ul style="list-style: none; position: relative;">
-                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation &nbsp;<i class="fas fa-chevron-right"></i></a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage &nbsp;<i class="fas fa-chevron-right"></i></a></li>
+                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation </a></li>
+                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage </a></li>
                                 <li><a class="dropdown-item Navbar_nav-link py-3" href="./ventilation.html"> Ventilation &nbsp;</a></li>
                             </ul>
                         </div>
@@ -112,19 +113,17 @@
 </section>
 <section class="travaux bg-blue">
     <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
+        <div class="row justify-content-center mb-5 pb-5" id="professionnel">
             <div class="col-md-6">
-                <a href="./nos-travaux.html" class="travaux_link">
                 <div class="travaux_button">
                     <div class="travaux_button-image">
                         <img src="./assets/img/man.png" class="travaux_button-image--img" alt="" />
                         <p class="travaux_button-title">Professionnel</p>
                     </div>
                 </div>
-            </a>
             </div>
             <div class="col-md-6">
-                <a href="./nos-travaux-particulier.html" class="travaux_link">
+                <a href="./nos-travaux-particulier.html#particulier" class="travaux_link">
                 <div class="travaux_button mt-5">
                     <div class="travaux_button-image">
                         <img src="./assets/img/persons.png" class="travaux_button-image--img" alt="" />
@@ -135,7 +134,7 @@
             </div>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./allianz.html" class="bg-blue travaux_link">
+            <a href="./allianz.html#allianz" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -170,42 +169,42 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./psa-pantin.html" class="bg-blue travaux_link">
-            <div class="travaux_card">
-                <div class="row">
-                    <div class="col-md-8 m-0 p-0">
-                        <div class="travaux_card-content">
-                            <ul class="travaux_card-content-ul">
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title dot-before">Professionnel</h3>
-                                </li>
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title dot-before">Climatisation (LG) : </h3>
-                                    <p class="travaux_card-content-p">3 showrooms : 28 unités intérieures et 9 groupes extérieurs<br>
-                                        Une mezzanine avec bureaux<br>
-                                        Accueil garage et bureaux RDC occasions véhicules <br>
-                                    </p>
-                                </li>
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title dot-before">1 an</h3>
-                                </li>
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title location-before">Pantin (93)</h3>
-                                </li>
-                            </ul>
+            <a href="./psa-pantin.html#psa" class="bg-blue travaux_link">
+                <div class="travaux_card">
+                    <div class="row">
+                        <div class="col-md-8 m-0 p-0">
+                            <div class="travaux_card-content">
+                                <ul class="travaux_card-content-ul">
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title dot-before">Professionnel</h3>
+                                    </li>
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title dot-before">Climatisation (LG) : </h3>
+                                        <p class="travaux_card-content-p">3 showrooms : 28 unités intérieures et 9 groupes extérieurs<br>
+                                            Une mezzanine avec bureaux<br>
+                                            Accueil garage et bureaux RDC occasions véhicules <br>
+                                        </p>
+                                    </li>
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title dot-before">1 an</h3>
+                                    </li>
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title location-before">Pantin (93)</h3>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-4 m-0 p-0">
-                        <div class="travaux_card-image">
-                            <img src="./assets/img/psa.png" class="travaux_card-image--img" alt="" />
+                        <div class="col-md-4 m-0 p-0">
+                            <div class="travaux_card-image">
+                                <p class="logo-copyright">PSA Groupe <br><small>(en sous-traitance avec NEA)</small></p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./capta-prod.html" class="bg-blue travaux_link">
+            <a href="./capta-prod.html#capta" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -240,7 +239,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./normal.html" class="bg-blue travaux_link">
+            <a href="./normal.html#normal" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
@@ -251,8 +250,7 @@
                                     </li>
                                     <li class="travaux_card-content-li">
                                         <h3 class="travaux_card-content-title dot-before">Climatisation (Mitsubishi Electric) : </h3>
-                                        <p class="travaux_card-content-p">4 unités intérieures et un groupe
-                                            extérieurextérieurs
+                                        <p class="travaux_card-content-p">4 unités intérieures et un groupe extérieur
                                         </p>
                                     </li>
                                     <li class="travaux_card-content-li">
@@ -266,7 +264,7 @@
                         </div>
                         <div class="col-md-4 m-0 p-0">
                             <div class="travaux_card-image">
-                                <img src="./assets/img/normal.png" class="travaux_card-image--img" alt="" />
+                                <p class="logo-copyright">Normal <br><small>(en sous-traitance avec ARTEA)</small></p>
                             </div>
                         </div>
                     </div>
@@ -274,12 +272,12 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./naturalia.html" class="bg-blue travaux_link">
+            <a href="./naturalia.html#naturalia" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
                             <div class="travaux_card-image">
-                                <img src="./assets/img/naturalia.png" class="travaux_card-image--img" alt="" />
+                                <p class="logo-copyright">Naturalia <br><small>(en sous-traitance avec ARTEA)</small></p>
                             </div>
                         </div>
                         <div class="col-md-8 m-0 p-0">
@@ -311,7 +309,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./francofa-eurodis.html" class="bg-blue travaux_link">
+            <a href="./francofa-eurodis.html#francofa" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
@@ -322,16 +320,15 @@
                                     </li>
                                     <li class="travaux_card-content-li">
                                         <h3 class="travaux_card-content-title dot-before">Climatisation (Mitsubishi Electric) : </h3>
-                                        <p class="travaux_card-content-p">huit unités intérieures et trois groupes
-                                            extérieurs,
-                                        </p>
+                                        <p class="travaux_card-content-p">76 : huit unités intérieures et trois groupes extérieurs, <br>91 : quatre unités intérieures et trois groupes extérieurs</p>
                                     </li>
                                     <li class="travaux_card-content-li">
-                                        <h3 class="travaux_card-content-title dot-before">1 semaine</h3>
+                                        <h3 class="travaux_card-content-title dot-before">76 : 1 semaine</h3>
+                                        <h3 class="travaux_card-content-title dot-before">91 : 1 semaine</h3>
                                     </li>
                                     <li class="travaux_card-content-li">
                                         <h3 class="travaux_card-content-title location-before">Saint-Etienne-du-Rouvray
-                                            (76)</h3>
+                                            (76) et Massy (91)</h3>
                                     </li>
                                 </ul>
                             </div>
@@ -346,7 +343,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./stock.html" class="bg-blue travaux_link">
+            <a href="./stock.html#stock" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -364,7 +361,7 @@
                                         <h3 class="travaux_card-content-title dot-before">
                                             Climatisation (Mitubishi Electric)</h3>
                                         <p class="travaux_card-content-p">deux unités intérieures et un groupe
-                                            extérieurs,
+                                            extérieur
                                         </p>
                                     </li>
                                     <li class="travaux_card-content-li">
@@ -381,7 +378,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./les-disquaires.html" class="bg-blue travaux_link">
+            <a href="./les-disquaires.html#disquaires" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
@@ -417,7 +414,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./cabinet.html" class="bg-blue travaux_link">
+            <a href="./cabinet-de-radiologie-nogent-sur-marne.html#nogent" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -549,7 +546,7 @@
     <hr class="sticky_divider">
     <div class="sticky_top">
       <div class="sticky_top-icon">
-        <img src="./assets/img/devis.png" class="sticky_top-icon--img" alt="" />
+        <img src="./assets/img/devis.png" class="sticky_top-icon--img2" alt="" />
       </div>
       <div class="sticky_top-content">
         <p class="sticky_top-content--p">Devis gratuit</p>
