--- a/devis.html
+++ b/devis.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="../assets/img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./assets/js/popper.min.js"></script>
     <script defer src="./assets/js/bootstrap.min.js"></script>
@@ -71,8 +71,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border-radius: 1.6rem; border-color: #14AE9B;">
                             <ul style="list-style: none; position: relative;">
-                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation &nbsp;<i class="fas fa-chevron-right"></i></a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage &nbsp;<i class="fas fa-chevron-right"></i></a></li>
+                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation</a></li>
+                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage</a></li>
                                 <li><a class="dropdown-item Navbar_nav-link py-3" href="./ventilation.html"> Ventilation &nbsp;</a></li>
                             </ul>
                         </div>
@@ -177,7 +177,7 @@
                             <img src="./assets/img/matier.png"
                                 class="travaux_button-image--img devis_button-image--img" alt="" />
                         </div>
-                        <p class="travaux_button-title mt-4">Maitre d’oeuvre <br>
+                        <p class="travaux_button-title mt-4 ml--30">Maitre d’oeuvre <br>
                             (bureau d’étude, architecte)</p>
                     </div>
                     <div class="devis_button matier" id="matier">
@@ -457,7 +457,7 @@
                     <i class="fas fa-chevron-left backIcon-i"></i>
                 </div>
                 <div class="container devis_input">
-                    <input type="text" class="devis_input-field" name="area" placeholder="139 m2">
+                    <input type="text" class="devis_input-field" name="area" placeholder="Exemple : 139 m2">
                 </div>
                 <div class="d-flex justify-content-center my-5" id="area">
                     <div class="devis_input-button">Continuer</div>
@@ -509,7 +509,7 @@
                     </div>
                     <div class="devis_input">
                         <label for="lastname" class="devis_input-label">Prénom</label>
-                        <input type="text" class="devis_input-field" id="lastname" name="lastname" placeholder="Jean">
+                        <input type="text" class="devis_input-field" id="lastname" name="lastname" placeholder="Guillaume">
                     </div>
                     <div class="devis_input">
                         <label for="email" class="devis_input-label">Votre adsresse mail</label>
