--- a/nos-travaux-particulier.html
+++ b/nos-travaux-particulier.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="../assets/img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./assets/js/popper.min.js"></script>
     <script defer src="./assets/js/bootstrap.min.js"></script>
@@ -44,6 +44,7 @@
     </script>
 </head>
 
+<!-- Ilyesse HAMCHERIF -->
 <body>
   <section class="Navbar navbar-main fixedNav">
     <nav class="navbar navbar-expand-lg fixedNav p-0">
@@ -71,8 +72,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border-radius: 1.6rem; border-color: #14AE9B;">
                             <ul style="list-style: none; position: relative;">
-                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation &nbsp;<i class="fas fa-chevron-right"></i></a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage &nbsp;<i class="fas fa-chevron-right"></i></a></li>
+                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation </a></li>
+                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage </a></li>
                                 <li><a class="dropdown-item Navbar_nav-link py-3" href="./ventilation.html"> Ventilation &nbsp;</a></li>
                             </ul>
                         </div>
@@ -112,30 +113,28 @@
 </section>
 <section class="travaux bg-blue">
     <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
+        <div class="row justify-content-center mb-5 pb-5" id="particulier">
             <div class="col-md-6">
-                <a href="./nos-travaux.html" class="travaux_link">
-                <div class="travaux_button">
-                    <div class="travaux_button-image">
-                        <img src="./assets/img/man-green.png" class="travaux_button-image--img" alt="" />
-                        <p class="travaux_button-title">Professionnel</p>
+                <a href="/nos-travaux.html#professionnel" class="travaux_link">
+                    <div class="travaux_button">
+                        <div class="travaux_button-image">
+                            <img src="./assets/img/man-green.png" class="travaux_button-image--img" alt="" />
+                            <p class="travaux_button-title">Professionnel</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
             </div>
             <div class="col-md-6">
-                <a href="./nos-travaux-particulier.html" class="travaux_link">
                 <div class="travaux_button mt-5">
                     <div class="travaux_button-image">
                         <img src="./assets/img/persons-white.png" class="travaux_button-image--img" alt="" />
                         <p class="travaux_button-title">Particulier</p>
                     </div>
                 </div>
-            </a>
             </div>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./chaigneau-chaumes-en-brie.html" class="bg-blue travaux_link">
+            <a href="./chaigneau-chaumes-en-brie.html#chaigneau" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -168,40 +167,40 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./psa-pantin.html" class="bg-blue travaux_link">
-            <div class="travaux_card">
-                <div class="row">
-                    <div class="col-md-8 m-0 p-0">
-                        <div class="travaux_card-content">
-                            <ul class="travaux_card-content-ul">
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title dot-before">Particulier (rénovation)</h3>
-                                </li>
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title dot-before">Climatisation (Hitachi) : </h3>
-                                    <p class="travaux_card-content-p"> trois unités intérieures et un groupe extérieur
-                                    </p>
-                                </li>
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title dot-before">3 jours</h3>
-                                </li>
-                                <li class="travaux_card-content-li">
-                                    <h3 class="travaux_card-content-title location-before">Beaumont-Village (37)</h3>
-                                </li>
-                            </ul>
+            <a href="./beaumont-village.html#beaumont" class="bg-blue travaux_link">
+                <div class="travaux_card">
+                    <div class="row">
+                        <div class="col-md-8 m-0 p-0">
+                            <div class="travaux_card-content">
+                                <ul class="travaux_card-content-ul">
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title dot-before">Particulier (rénovation)</h3>
+                                    </li>
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title dot-before">Climatisation (Hitachi)</h3>
+                                        <p class="travaux_card-content-p">trois unités intérieures et un groupe extérieur
+                                        </p>
+                                    </li>
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title dot-before">3 jours</h3>
+                                    </li>
+                                    <li class="travaux_card-content-li">
+                                        <h3 class="travaux_card-content-title location-before">Beaumont-Village (37)</h3>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-4 m-0 p-0">
-                        <div class="travaux_card-image">
-                            <img src="./assets/img/particuliers/2.png" class="travaux_card-image--img" alt="" />
+                        <div class="col-md-4 m-0 p-0">
+                            <div class="travaux_card-image">
+                                <img src="./assets/img/particuliers/2.png" class="travaux_card-image--img" alt="" />
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./capta-prod.html" class="bg-blue travaux_link">
+            <a href="./milly-la-foret.html#milly" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -234,7 +233,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./normal.html" class="bg-blue travaux_link">
+            <a href="./paris16.html#paris16" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
@@ -267,7 +266,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./naturalia.html" class="bg-blue travaux_link">
+            <a href="./bois-le-roi.html#boisleroi" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -301,7 +300,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./francofa-eurodis.html" class="bg-blue travaux_link">
+            <a href="./savigny-sur-orge.html#savigny" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
@@ -334,7 +333,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./naturalia.html" class="bg-blue travaux_link">
+            <a href="./paris1.html#paris1" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-4 m-0 p-0">
@@ -368,7 +367,7 @@
             </a>
         </div>
         <div class="bg-blue travaux_padding">
-            <a href="./francofa-eurodis.html" class="bg-blue travaux_link">
+            <a href="./orsay.html#orsay" class="bg-blue travaux_link">
                 <div class="travaux_card">
                     <div class="row">
                         <div class="col-md-8 m-0 p-0">
@@ -497,7 +496,7 @@
     <hr class="sticky_divider">
     <div class="sticky_top">
       <div class="sticky_top-icon">
-        <img src="./assets/img/devis.png" class="sticky_top-icon--img" alt="" />
+        <img src="./assets/img/devis.png" class="sticky_top-icon--img2" alt="" />
       </div>
       <div class="sticky_top-content">
         <p class="sticky_top-content--p">Devis gratuit</p>
