Adding border radius on Nos services's images

--- a/ventilation.html
+++ b/ventilation.html
@@ -235,17 +235,17 @@
         <div class="row justify-content-center align-items-center text-center">
             <div class="col-md-4 col-sm-6 m-0 p-0">
                 <div class="inline_image" data-aos="fade-up">
-                    <img src="./assets/img/v2.1.png" class="inline_image-img" alt="" />
+                    <img src="./assets/img/i-1.1.png" class="inline_image-img" alt="" />
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 m-0 p-0">
                 <div class="inline_image" data-aos="fade-up">
-                    <img src="./assets/img/v3.1.png" class="inline_image-img" alt="" />
+                    <img src="./assets/img/i-2.1.png" class="inline_image-img" alt="" />
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 m-0 p-0">
                 <div class="inline_image" data-aos="fade-up">
-                    <img src="./assets/img/v4.1.png" class="inline_image-img" alt="" />
+                    <img src="./assets/img/i-3.1.png" class="inline_image-img" alt="" />
                 </div>
             </div>
         </div>
