Changing qui-sommes-nous page  on hp

--- a/chauffage.html
+++ b/chauffage.html
@@ -361,7 +361,7 @@
                         <li class="footer_content-li"> Address : <p class="footer_content-li--link text-center">
                                 7 Rue de la Plaine de la Croix Besnard -  77000 Vaux-le-Pénil</p>
                         </li>
-                        <li class="footer_content-li">Téléphone : <a href="tel:01 64 38 35 82"
+                        <li class="footer_content-li">Téléphone : <a href="tel:0164383582"
                                 class="footer_content-li--link">01 64 38 35 82</a></li>
                         <li class="footer_content-li">E-mail : <a href="mailto: mgps-idf@outlook.com"
                                 class="footer_content-li--link">mgps-idf@outlook.com</a></li>
@@ -397,7 +397,7 @@
       </div>
       <div class="sticky_top-content">
         <p class="sticky_top-content--p">Contactez-nous</p>
-        <a href="tel:01 64 38 35 82"><p class="sticky_top-content--p">01 64 38 35 82</p></a>
+        <a href="tel:0164383582"><p class="sticky_top-content--p">01 64 38 35 82</p></a>
       </div>
     </div>
     <hr class="sticky_divider">
