--- a/allianz.html
+++ b/allianz.html
@@ -319,7 +319,7 @@
       </div>
       <div class="sticky_top-content">
         <p class="sticky_top-content--p">Contactez-nous</p>
-        <a href="tel:01 64 38 35 82"><p class="sticky_top-content--p">01 64 38 35 82</p></a>
+        <a href="tel:0164383582"><p class="sticky_top-content--p">01 64 38 35 82</p></a>
       </div>
     </div>
     <hr class="sticky_divider">
