Adding new navbar & contact page

--- a/allianz.html
+++ b/allianz.html
@@ -57,35 +57,20 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars fa-2x toggle-button" aria-hidden="true"></i>
             </button>
+            
             <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
                 <ul class="navbar-nav Navbar_nav mr-auto">
                     <li class="nav-item Navbar_nav-item m-0 p-0">
                         <a class="nav-link Navbar_nav-link" href="./index.html">Accueil</a>
                     </li>
                     <li class="nav-item Navbar_nav-item m-0 p-0">
-                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html">Qui sommes-nous ?</a>
+                        <a class="nav-link Navbar_nav-link" href="./climatisation.html">Climatisation</a>
                     </li>
-                    <li class="nav-item dropdown Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link dropdown-toggle  d-flex align-items-center" href="#"
-                            id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> Nos services
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border-radius: 1.6rem; border-color: #14AE9B;">
-                            <ul style="list-style: none; position: relative;">
-                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation </a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage </a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./ventilation.html"> Ventilation &nbsp;</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="dropdown-menu clim-hide" aria-labelledby="navbarDropdown">
-                            <ul style="list-style: none;">
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href=""> Résidentiel et petit tertaire</a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href=""> Tertiare et grandes puissances</a></li>
-                            </ul>
-                        </div>
-
-
+                    <li class="nav-item Navbar_nav-item m-0 p-0">
+                        <a class="nav-link Navbar_nav-link" href="./chauffage.html">Chauffage</a>
+                    </li>
+                    <li class="nav-item Navbar_nav-item m-0 p-0">
+                        <a class="nav-link Navbar_nav-link" href="./ventilation.html">Ventilation</a>
                     </li>
                     <li class="nav-item Navbar_nav-item m-0 p-0">
                         <a class="nav-link Navbar_nav-link" href="./nos-travaux.html">Nos références</a>
@@ -93,7 +78,7 @@
                 </ul>
                 <ul class="navbar-nav Navbar_nav mr-auto">
                     <li class="nav-item Navbar_nav-item m-0 p-0 ml-auto">
-                        <a class="nav-link Navbar_nav-btn" href="./devis.html">Demandez votre devis </a>
+                        <a class="nav-link Navbar_nav-btn" href="./contact.html">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
