--- a/contact.html
+++ b/contact.html
@@ -63,29 +63,13 @@
                         <a class="nav-link Navbar_nav-link" href="./index.html">Accueil</a>
                     </li>
                     <li class="nav-item Navbar_nav-item m-0 p-0">
-                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html">Qui sommes-nous ?</a>
+                        <a class="nav-link Navbar_nav-link" href="./climatisation.html">Climatisation</a>
                     </li>
-                    <li class="nav-item dropdown Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link dropdown-toggle  d-flex align-items-center" href="#"
-                            id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> Nos services
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border-radius: 1.6rem; border-color: #14AE9B;">
-                            <ul style="list-style: none; position: relative;">
-                                <li class="climclass"><a class="dropdown-item Navbar_nav-link py-3" href="./climatisation.html"> Climatisation </a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./chauffage.html"> Chauffage </a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href="./ventilation.html"> Ventilation &nbsp;</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="dropdown-menu clim-hide" aria-labelledby="navbarDropdown">
-                            <ul style="list-style: none;">
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href=""> Résidentiel et petit tertaire</a></li>
-                                <li><a class="dropdown-item Navbar_nav-link py-3" href=""> Tertiare et grandes puissances</a></li>
-                            </ul>
-                        </div>
-
-
+                    <li class="nav-item Navbar_nav-item m-0 p-0">
+                        <a class="nav-link Navbar_nav-link" href="./chauffage.html">Chauffage</a>
+                    </li>
+                    <li class="nav-item Navbar_nav-item m-0 p-0">
+                        <a class="nav-link Navbar_nav-link" href="./ventilation.html">Ventilation</a>
                     </li>
                     <li class="nav-item Navbar_nav-item m-0 p-0">
                         <a class="nav-link Navbar_nav-link" href="./nos-travaux.html">Nos références</a>
@@ -93,7 +77,7 @@
                 </ul>
                 <ul class="navbar-nav Navbar_nav mr-auto">
                     <li class="nav-item Navbar_nav-item m-0 p-0 ml-auto">
-                        <a class="nav-link Navbar_nav-btn" href="./devis.html">Demandez votre devis </a>
+                        <a class="nav-link Navbar_nav-btn" href="./contact.html">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
@@ -103,40 +87,70 @@
 
   
 
-  <div class="">
-    <h1>Contact</h1>
-
-<form class="form" method="post" action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
-    <input type="hidden" name="lang" value="fr">
-    <input type="hidden" name="type" value="contact">
-    <input type="hidden" name="website" value="">
-    <input type="hidden" name="redirectUrl" value="http://localhost:4000/message-envoye">
-    <div class="row">
-        <div class="col-6">
-            <div class="row">
-                <div class="col-6">
-                    <div class="form-group">
-                        <label for="name">Nom</label>
-                        <input type="text" class="form-control" id="name" name="name">
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre email.</small>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="commentaire">Commentaire</label>
-                <textarea class="form-control" id="commentaire" name="commentaire" rows="3"></textarea>
-            </div>
+<div class="">
+    <section class="banner-contact bg-blue">
+    <div class="container">
+        <div class="banner_content">
+            <h1 class="banner_content-title">Contactez-nous</h1>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Envoyer</button>
-</form>
+</section>
 
+<section class="contact bg-blue">
+    <div class="container-fluid">
+        <form class="form contact_content-form" id="contactForm" method="post"
+            action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
+            <input type="hidden" name="lang" value="fr">
+            <input type="hidden" name="type" value="contact">
+            <input type="hidden" name="firstName" value="" />
+            <input type="hidden" name="website" value="337">
+            <input type="hidden" name="redirectUrl" value="/message-envoye">
+            <input type="hidden" name="redirectUrl" value="/" />
+            <input type="hidden" name="key" value="6LfsF7QiAAAAAPoeHZR6e7-7HoHTGQY4s2xsZ-PS">
+            <input type="hidden" name="website" value="337" />
+
+            <div>
+                <div class="container">
+                    <div class="contact_input">
+                        <label for="name" class="contact_input-label">Nom</label>
+                        <input type="text" class="contact_input-field" id="name" name="name" placeholder="Dupont">
+                    </div>
+                    <div class="contact_input">
+                        <label for="lastname" class="contact_input-label">Prénom</label>
+                        <input type="text" class="contact_input-field" id="lastname" name="lastname" placeholder="Guillaume">
+                    </div>
+                    <div class="contact_input">
+                        <label for="email" class="contact_input-label">Votre adresse mail</label>
+                        <input type="email" class="contact_input-field" id="email" name="email"
+                            placeholder="exemple@contact.fr">
+                    </div>
+                    <div class="contact_input">
+                        <label for="phone" class="contact_input-label">Votre numéro de télephone</label>
+                        <input type="text" class="contact_input-field" id="phone" name="phone"
+                            placeholder="00.00.00.00.00">
+                    </div>
+                </div>
+
+                <div class="form-group d-flex justify-content-center my-5">
+                    <div class="g-recaptcha" data-sitekey="6LfsF7QiAAAAABlbiGzXNu_nsaSMtCfB4ZXytyC-"></div>
+                    <br />
+                    <div id="contact-form-response"></div>
+                </div>
+                <div class="checkbox d-flex justify-content-center my-5">
+                    <input name="condition" type="checkbox" style="width: 4rem; height: 2rem;" />
+                    <span class="menu_content-p text-center">
+                        En utilisant ce formulaire, vous acceptez le stockage et la gestion
+                        de vos données par ce site *</span>
+                    <i class="fa fa-info-square" aria-hidden="true"></i>
+                </div>
+                <div class="d-flex justify-content-center my-3">
+                    <button type="submit" class="contact_input-button form-submit"
+                        value="Submit">Envoyer ma demande</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
   </div>
 
   <footer class="footer">
@@ -159,7 +173,7 @@
                     <div class="footer_content-bottom">
                         <h3 class="footer_content-bottom--title">Un projet ?</h3>
                         <div class="stripe_content-button">
-                            <a class="nav-link Navbar_nav-btn" href="./devis.html">Demandez votre devis </a>
+                            <a class="nav-link Navbar_nav-btn" href="./contact.html">Demandez votre contact </a>
                         </div>
                     </div>
                 </div>
@@ -232,11 +246,11 @@
     <hr class="sticky_divider">
     <div class="sticky_top">
       <div class="sticky_top-icon">
-        <img src="./assets/img/devis.png" class="sticky_top-icon--img2" alt="" />
+        <img src="./assets/img/contact.png" class="sticky_top-icon--img2" alt="" />
       </div>
       <div class="sticky_top-content">
-        <p class="sticky_top-content--p">Devis gratuit</p>
-        <a class="sticky_top-content--btn" href="./devis.html">Demandez votre devis </a>
+        <p class="sticky_top-content--p">contact gratuit</p>
+        <a class="sticky_top-content--btn" href="./contact.html">Demandez votre contact </a>
       </div>
     </div>
   </div>
