Adding new partners

--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -175,20 +175,23 @@
                 <h3 class="one_card-title">Nos attestations</h3>
             </div>
             <div class="partners_flex">
-                <div class="partners_image text-center" data-aos="fade-up">
-                    <img src="./assets/img/11.png" class="partners_image-img w-80" alt="" />
+                <div class="partners_image" data-aos="fade-up">
+                    <img src="./assets/img/11.png" class="partners_image-img w-80" alt="Logo Qualibat" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/12.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/12.png" class="partners_image-img w-80" alt="Logo FFB" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/13.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/13.png" class="partners_image-img w-80" alt="Logo RGE Qualibat" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/14.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/14.png" class="partners_image-img w-80" alt="Logo Medef" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/15.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/15.png" class="partners_image-img w-80" alt="Logo ADC" />
+                </div>
+                <div class="partners_image">
+                    <img src="./assets/img/15-16.png" class="partners_image-img w-80" alt="Logo Qualigaz" />
                 </div>
             </div>
         </div>
