--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="stripe_content-button mt-5 pt-19">
-                    <a class="nav-link Navbar_nav-btn mt-5" href="tel:0164383582">&nbsp;
+                    <a class="nav-link Navbar_nav-btn mt-5" href="/contact.html">&nbsp;
                         Contactez-nous &nbsp;</a>
                 </div>
             </div>
@@ -220,20 +220,23 @@
                 <h3 class="one_card-title">Nos attestations</h3>
             </div>
             <div class="partners_flex">
-                <div class="partners_image text-center" data-aos="fade-up">
-                    <img src="./assets/img/11.png" class="partners_image-img w-80" alt="" />
+                <div class="partners_image" data-aos="fade-up">
+                    <img src="./assets/img/11.png" class="partners_image-img w-80" alt="Logo Qualibat" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/12.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/12.png" class="partners_image-img w-80" alt="Logo FFB" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/13.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/13.png" class="partners_image-img w-80" alt="Logo RGE Qualibat" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/14.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/14.png" class="partners_image-img w-80" alt="Logo Medef" />
                 </div>
                 <div class="partners_image">
-                    <img src="./assets/img/15.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/15.png" class="partners_image-img w-80" alt="Logo ADC" />
+                </div>
+                <div class="partners_image">
+                    <img src="./assets/img/15-16.png" class="partners_image-img w-80" alt="Logo Qualigaz" />
                 </div>
             </div>
         </div>
@@ -326,7 +329,7 @@
                     </div>
                 </div>
                 <div class="stripe_content-button mt-5 pt-34">
-                    <a class="nav-link Navbar_nav-btn mt-5" href="tel:0164383582">&nbsp;
+                    <a class="nav-link Navbar_nav-btn mt-5" href="/contact.html">&nbsp;
                         Contactez-nous &nbsp;</a>
                 </div>
             </div>
