--- a/ventilation.html
+++ b/ventilation.html
@@ -163,19 +163,22 @@
         <div class="one_partners one_cards-content justify-content-center align-items-center text-center">
             <div class="partners_flex">
                 <div class="partners_image" data-aos="fade-up">
-                    <img src="./assets/img/11.png" class="partners_image-img w-80" alt="" />
+                    <img src="./assets/img/11.png" class="partners_image-img w-80" alt="Logo Qualibat" />
                 </div>
-                <div class="partners_image" data-aos="fade-up">
-                    <img src="./assets/img/12.png" class="partners_image-img w-80" alt="" />
+                <div class="partners_image">
+                    <img src="./assets/img/12.png" class="partners_image-img w-80" alt="Logo FFB" />
                 </div>
-                <div class="partners_image" data-aos="fade-up">
-                    <img src="./assets/img/13.png" class="partners_image-img w-80" alt="" />
+                <div class="partners_image">
+                    <img src="./assets/img/13.png" class="partners_image-img w-80" alt="Logo RGE Qualibat" />
                 </div>
-                <div class="partners_image" data-aos="fade-up">
-                    <img src="./assets/img/14.png" class="partners_image-img w-80" alt="" />
+                <div class="partners_image">
+                    <img src="./assets/img/14.png" class="partners_image-img w-80" alt="Logo Medef" />
                 </div>
-                <div class="partners_image" data-aos="fade-up">
-                    <img src="./assets/img/15.png" class="partners_image-img w-80" alt="" />
+                <div class="partners_image">
+                    <img src="./assets/img/15.png" class="partners_image-img w-80" alt="Logo ADC" />
+                </div>
+                <div class="partners_image">
+                    <img src="./assets/img/15-16.png" class="partners_image-img w-80" alt="Logo Qualigaz" />
                 </div>
             </div>
         </div>
